See #767: Split steps html in separate files. Add Diagnostics screen. Fix button alignemnt

--- a/src/admin/css/wordlift-admin-setup.sass
+++ b/src/admin/css/wordlift-admin-setup.sass
@@ -137,7 +137,17 @@ body
     text-align: center
 
     > *
-      margin-right: 32px
+      margin: 0 16px
+
+  .privacy-policy-details
+    padding-top: 35px
+
+    a
+      color: #fff
+
+      &:hover
+        text-decoration: none
+
 
   button, input[type="button"], a.button, input[type="submit"]
     // Reset default.
